--- a/kakeibo/templates/kakeibo/kakeibo_list.html
+++ b/kakeibo/templates/kakeibo/kakeibo_list.html
@@ -11,7 +11,12 @@
         </ul>
     {% endif %}
 
-    <h2><a href="{% url 'kakeibo:kakeibo_create' %}">家計簿入力</a></h2>
+    <table class="table table-sm ">
+        <tr>
+            <th><h2><a href="{% url 'kakeibo:kakeibo_create' %}">家計簿入力</a></h2></th>
+            <th><h2><a href="{% url 'kakeibo:kakeibo_create' %}">今月の請求額</a></h2></th>
+        </tr>
+    </table>
 
     <table class="table table-sm ">
         <tr>
@@ -21,23 +26,29 @@
             <th>金額</th>
             <th>メモ</th>
             <th>支払者</th>
-            <th>清算/未清算</th>
+            <th>清算</th>
             <th>編集</th>
             <th>削除</th>
         </tr>
         {% for kakeibo in kakeibo_list %}
             <tr>
-                <td align="center" nowrap>{{ forloop.counter }}</td>
-                <td nowrap>{{ kakeibo.date }}</td>
-                <td nowrap>{{ kakeibo.category }}</td>
-                <td align="right" nowrap>¥ {{ kakeibo.money|intcomma }}</td>
-                <td nowrap>{{ kakeibo.memo|default_if_none:"" }}</td>
-                <td nowrap>{{ kakeibo.payer }}</td>
-                <td nowrap>{{ kakeibo.seisan }}</td>
-                <td align="center" nowrap>
+                <td align="right">{{ forloop.counter }}</td>
+                <td>{{ kakeibo.date }}</td>
+                <td>{{ kakeibo.category }}</td>
+                <td align="right">¥ {{ kakeibo.money|intcomma }}</td>
+                <td>{{ kakeibo.memo|default_if_none:"" }}</td>
+                <td>{{ kakeibo.payer }}</td>
+                <td>
+                    {% if kakeibo.seisan %}
+                        済
+                    {% else %}
+                        未
+                    {% endif %}
+                </td>
+                <td align="center">
                     <a href="{% url 'kakeibo:kakeibo_update' pk=kakeibo.pk %}">編集</a>
                 </td>
-                <td align="center" nowrap>
+                <td align="center">
                     <a href="{% url 'kakeibo:kakeibo_delete' pk=kakeibo.pk %}">削除</a>
                 </td>
             </tr>
