清算機能追加

--- a/kakeibo/templates/kakeibo/kakeibo_list.html
+++ b/kakeibo/templates/kakeibo/kakeibo_list.html
@@ -14,7 +14,7 @@
     <table class="table table-sm ">
         <tr>
             <th><h2><a href="{% url 'kakeibo:kakeibo_create' %}">家計簿入力</a></h2></th>
-            <th><h2><a href="{% url 'kakeibo:kakeibo_create' %}">今月の請求額</a></h2></th>
+            <th><h2><a href="{% url 'kakeibo:kakeibo_seisan' %}">今月の清算額</a></h2></th>
         </tr>
     </table>
 
