レイアウト変更

--- a/kakeibo/static/css/kakeibo.css
+++ b/kakeibo/static/css/kakeibo.css
@@ -1,5 +1,6 @@
 .page-header {
-    background-color: #C25100;
+    /*background-color: #C25100;*/
+    background-color: #d5eb94;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
@@ -43,8 +44,4 @@ h1, h2, h3, h4 {
 
 .kakeibo h2 a, .kakeibo h2 a:visited {
     color: #000000;
-}
-
-.comment {
-    margin: 20px 0px 20px 20px;
 }
