--- a/kakeibo/templates/kakeibo/base.html
+++ b/kakeibo/templates/kakeibo/base.html
@@ -13,8 +13,12 @@
         </div>
         <div class="content container">
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-xs-6 col-md-8">
                     {% block content %}
+                    {% endblock %}
+                </div>
+                <div class="col-xs-6 col-md-4">
+                    {% block content2 %}
                     {% endblock %}
                 </div>
             </div>
