--- a/kakeibo/templates/kakeibo/kakeibo_edit.html
+++ b/kakeibo/templates/kakeibo/kakeibo_edit.html
@@ -1,7 +1,7 @@
 {% extends 'kakeibo/base.html' %}
 
 {% block content %}
-    <h2>家計簿入力</h2>
+    <h2>家計簿</h2>
     <form method="POST" class="post-form">
     	{% csrf_token %}
         
