--- a/kakeibo/templates/kakeibo/kakeibo_confirm_delete.html
+++ b/kakeibo/templates/kakeibo/kakeibo_confirm_delete.html
@@ -5,7 +5,7 @@
     <h2>削除確認</h2>
     <br>
     <p>以下の内容を削除しますか？</p>
-    <table class="table table-sm ">
+    <table class="table">
         <tr>
             <th>日付</th>
             <th>カテゴリ</th>
