--- a/kakeibo/templates/kakeibo/kakeibo_list.html
+++ b/kakeibo/templates/kakeibo/kakeibo_list.html
@@ -11,14 +11,14 @@
         </ul>
     {% endif %}
 
-    <table class="table table-sm ">
+    <table class="table">
         <tr>
             <th><h2><a href="{% url 'kakeibo:kakeibo_create' %}">家計簿入力</a></h2></th>
             <th><h2><a href="{% url 'kakeibo:kakeibo_seisan' %}">今月の清算額</a></h2></th>
         </tr>
     </table>
 
-    <table class="table table-sm ">
+    <table class="table table-striped">
         <tr>
             <th>No.</th>
             <th>日付</th>
