--- a/kakeibo/templates/kakeibo/kakeibo_list.html
+++ b/kakeibo/templates/kakeibo/kakeibo_list.html
@@ -38,7 +38,7 @@
                 <td align="right">¥ {{ kakeibo.money|intcomma }}</td>
                 <td>{{ kakeibo.memo|default_if_none:"" }}</td>
                 <td>{{ kakeibo.payer }}</td>
-                <td>
+                <td align="center">
                     {% if kakeibo.seisan %}
                         済
                     {% else %}
