--- a/kakeibo/templates/kakeibo/kakeibo_list.html
+++ b/kakeibo/templates/kakeibo/kakeibo_list.html
@@ -10,13 +10,14 @@
             {% endfor %}
         </ul>
     {% endif %}
-
-    <table class="table">
-        <tr>
-            <th><h2><a href="{% url 'kakeibo:kakeibo_create' %}">家計簿入力</a></h2></th>
-            <th><h2><a href="{% url 'kakeibo:kakeibo_seisan' %}">今月の清算額</a></h2></th>
-        </tr>
-    </table>
+    <div class="row">
+        <div class="col-xs-6 col-md-3">
+            <h2><a href="{% url 'kakeibo:kakeibo_create' %}">家計簿入力</a></h2>
+        </div>
+        <div class="col-xs-6 col-md-3">
+            <h2><a href="{% url 'kakeibo:kakeibo_seisan' %}">今月の清算額</a></h2>
+        </div>
+    </div>
 
     <table class="table table-striped">
         <tr>
@@ -35,7 +36,7 @@
                 <td align="right">{{ forloop.counter }}</td>
                 <td>{{ kakeibo.date }}</td>
                 <td>{{ kakeibo.category }}</td>
-                <td align="right">¥ {{ kakeibo.money|intcomma }}</td>
+                <td align="right">{{ kakeibo.money|intcomma }}</td>
                 <td>{{ kakeibo.memo|default_if_none:"" }}</td>
                 <td>{{ kakeibo.payer }}</td>
                 <td align="center">{% if kakeibo.seisan %}済{% else %}未{% endif %}</td>
