--- a/kakeibo/templates/kakeibo/base.html
+++ b/kakeibo/templates/kakeibo/base.html
@@ -13,11 +13,11 @@
         </div>
         <div class="content container">
             <div class="row">
-                <div class="col-xs-6 col-md-9">
+                <div class="col-md-9">
                     {% block content %}
                     {% endblock %}
                 </div>
-                <div class="col-xs-6 col-md-3">
+                <div class="col-md-3">
                     {% block content2 %}
                     {% endblock %}
                 </div>
