一括清算機能追加

--- a/kakeibo/templates/kakeibo/kakeibo_confirm_delete.html
+++ b/kakeibo/templates/kakeibo/kakeibo_confirm_delete.html
@@ -3,7 +3,7 @@
 
 {% block content %}       
     <div class="row">
-        <div class="col-xs-6 col-md-8">
+        <div class="col-md-8">
 
             <h2>以下の内容を削除しますか？</h2>
             <table class="table">
