--- a/kakeibo/templates/kakeibo/kakeibo_list.html
+++ b/kakeibo/templates/kakeibo/kakeibo_list.html
@@ -11,11 +11,14 @@
         </ul>
     {% endif %}
     <div class="row">
-        <div class="col-xs-6 col-md-3">
+        <div class="col-md-3">
             <h2><a href="{% url 'kakeibo:kakeibo_create' %}">家計簿入力</a></h2>
         </div>
-        <div class="col-xs-6 col-md-3">
-            <h2><a href="{% url 'kakeibo:kakeibo_seisan' %}">今月の清算額</a></h2>
+        <div class="col-md-3">
+            <h2><a href="{% url 'kakeibo:kakeibo_seisan' %}">未清算額</a></h2>
+        </div>
+        <div class="col-md-3">
+            <h2><a href="{% url 'kakeibo:kakeibo_seisanzumi' %}">過去分</a></h2>
         </div>
     </div>
 
