エンターキーによるsubmit禁止

--- a/kakeibo/templates/kakeibo/kakeibo_confirm_delete.html
+++ b/kakeibo/templates/kakeibo/kakeibo_confirm_delete.html
@@ -27,7 +27,7 @@
 
             <form method="POST" class="post-form">
             	{% csrf_token %}
-                <button type="submit" class="save btn btn-default">削除</button>
+                <button type="button" class="save btn btn-default" onclick="submit();">削除</button>
             </form>
 
         </div>
