--- a/kakeibo/templates/kakeibo/kakeibo_edit.html
+++ b/kakeibo/templates/kakeibo/kakeibo_edit.html
@@ -9,6 +9,6 @@
         	{{ form.as_table }}
         </table>
 
-        <button type="submit" class="save btn btn-default">保存</button>
+        <button type="button" class="save btn btn-default" onclick="submit();">保存</button>
     </form>
 {% endblock %}
