--- a/kakeibo/templates/kakeibo/base.html
+++ b/kakeibo/templates/kakeibo/base.html
@@ -23,6 +23,9 @@
                 </div>
             </div>
         </div>
+
+        <script type="text/javascript" src="{% static 'js/scripts.js' %}"></script>
+        
     </body>
 </html>
 
