グラフ化テスト

--- a/kakeibo/templates/kakeibo/kakeibo_list.html
+++ b/kakeibo/templates/kakeibo/kakeibo_list.html
@@ -20,6 +20,9 @@
         <div class="col-md-3">
             <h2><a href="{% url 'kakeibo:kakeibo_seisanzumi' %}">過去分</a></h2>
         </div>
+        <div class="col-md-3">
+            <h2><a href="{% url 'kakeibo:kakeibo_graph' %}">グラフ</a></h2>
+        </div>
     </div>
 
     <table class="table table-striped">
